# DevSpace

./: .gitignore  README.md  pyproject.toml
capstoneproject/: settings.py  urls.py  wsgi.py
messagesapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
messagesapp/migrations/: 0001_initial.py  0002_auto_20200709_1928.py  0002_auto_20200722_0228.py
messagesapp/templates/: comment_form.html
notificationsapp/: admin.py  apps.py  models.py  urls.py  views.py
notificationsapp/migrations/: 0001_initial.py
notificationsapp/templates/: notifications.htm  notifications.html
postapp/: admin.py  forms.py  models.py  urls.py  views.py
postapp/migrations/: 0001_initial.py  0002_auto_20200710_0155.py  0002_auto_20200710_0159.py  0002_auto_20200710_0213.py  0002_auto_20200710_0252.py  0002_auto_20200710_1522.py  0002_auto_20200719_1951.py  0002_auto_20200719_2025.py  0002_auto_20200719_2226.py  0002_auto_20200720_2117.py  0002_auto_20200721_0159.py  0003_auto_20200719_2005.py  0003_merge_20200721_1520.py  0004_auto_20200719_2037.py  0005_auto_20200720_0403.py  0006_auto_20200720_1637.py  0007_auto_20200720_1740.py  0008_auto_20200720_1743.py  0009_auto_20200720_1754.py
postapp/templates/: generic_form.html  post.html
resumeapp/: admin.py  forms.py  models.py  urls.py  views.py
resumeapp/migrations/: 0001_initial.py
resumeapp/templates/: resume.htm  resume.html  resume_form.htm  resume_form.html
userapp/: admin.py  forms.py  models.py  urls.py  views.py
userapp/migrations/: 0001_initial.py  0002_developer_headshot.py
userapp/static/: styles.css
(+11 files in other folders)
