[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Capstone project"
authors = ["Capstone Emerald"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
Pillow = "^7.2.0"
django-cors-headers = "^3.4.0"
django-phonenumber-field = "^4.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
